// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual modes API navigation should compute both snapshot & timespan results 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bf-cache",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "color-contrast",
  "content-width",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "empty-heading",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "geolocation-on-start",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "http-status-code",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "inspector-issues",
  "installable-manifest",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shift-elements",
  "lcp-lazy-loaded",
  "legacy-javascript",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "maskable-icon",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "paste-preventing-inputs",
  "performance-budget",
  "plugins",
  "preload-fonts",
  "prioritize-lcp-image",
  "pwa-cross-browser",
  "pwa-each-page-has-url",
  "pwa-page-transitions",
  "redirects",
  "render-blocking-resources",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "select-name",
  "server-response-time",
  "skip-link",
  "speed-index",
  "splash-screen",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "tap-targets",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "themed-omnibox",
  "third-party-facades",
  "third-party-summary",
  "timing-budget",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-rel-preload",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API navigation should compute results with callback requestor 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bf-cache",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "color-contrast",
  "content-width",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "empty-heading",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "geolocation-on-start",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "http-status-code",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "inspector-issues",
  "installable-manifest",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shift-elements",
  "lcp-lazy-loaded",
  "legacy-javascript",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "maskable-icon",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "paste-preventing-inputs",
  "performance-budget",
  "plugins",
  "preload-fonts",
  "prioritize-lcp-image",
  "pwa-cross-browser",
  "pwa-each-page-has-url",
  "pwa-page-transitions",
  "redirects",
  "render-blocking-resources",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "select-name",
  "server-response-time",
  "skip-link",
  "speed-index",
  "splash-screen",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "tap-targets",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "themed-omnibox",
  "third-party-facades",
  "third-party-summary",
  "timing-budget",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-rel-preload",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API snapshot should compute accessibility results on the page as-is 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "button-name",
  "bypass",
  "color-contrast",
  "crawlable-anchors",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "empty-heading",
  "focus-traps",
  "focusable-controls",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "interactive-element-affordance",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "managed-focus",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "object-alt",
  "offscreen-content-hidden",
  "paste-preventing-inputs",
  "plugins",
  "robots-txt",
  "select-name",
  "skip-link",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "tap-targets",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "unsized-images",
  "use-landmarks",
  "uses-responsive-images-snapshot",
  "valid-lang",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API startTimespan should compute ConsoleMessage results across a span of time 1`] = `
Array [
  "bf-cache",
  "bootup-time",
  "cumulative-layout-shift",
  "deprecations",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "image-aspect-ratio",
  "image-size-responsive",
  "inspector-issues",
  "interaction-to-next-paint",
  "is-on-https",
  "layout-shift-elements",
  "legacy-javascript",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "preload-fonts",
  "screenshot-thumbnails",
  "script-treemap-data",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "work-during-interaction",
]
`;

exports[`Individual modes API startTimespan should compute ConsoleMessage results across a span of time 2`] = `
Array [
  "non-composited-animations",
  "preload-fonts",
  "third-party-summary",
  "user-timings",
]
`;

exports[`Individual modes API startTimespan should compute results from timespan after page load 1`] = `
Array [
  "bf-cache",
  "bootup-time",
  "cumulative-layout-shift",
  "deprecations",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "image-aspect-ratio",
  "image-size-responsive",
  "inspector-issues",
  "interaction-to-next-paint",
  "is-on-https",
  "layout-shift-elements",
  "legacy-javascript",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "preload-fonts",
  "screenshot-thumbnails",
  "script-treemap-data",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "work-during-interaction",
]
`;

exports[`Individual modes API startTimespan should compute results from timespan after page load 2`] = `
Array [
  "bootup-time",
  "duplicated-javascript",
  "efficient-animated-content",
  "legacy-javascript",
  "modern-image-formats",
  "network-rtt",
  "network-server-latency",
  "non-composited-animations",
  "preload-fonts",
  "third-party-summary",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-optimized-images",
  "uses-responsive-images",
  "uses-text-compression",
]
`;
